5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1638_2450.log
== TEST (2019-04-15 17:47:15) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))

if (x.upper()== y):
	x1 = list.sort(x,y)
	print(x1)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:47:32) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))

if (x.upper()== y):
	x1 = list.sort(x,y)
	print(x1)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:48:01) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))

if (x.upper()== y):
	list.sort(x,y)
	print(x,y)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:49:12) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
x1 = [x , y]
if (x.upper()== y):
	list.sort(x,y)
	print(x1.list.sort())
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:49:39) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
x1 = [x , y]
if (x.upper()== y):
	list.sort(x,y)
	print(list.sort(x1))
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:49:58) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
x1 = [x , y]
if (x.upper()== y):
	print(list.sort(x1))
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:50:22) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
x1 = [x , y]
if (x.upper()== y):
	print(list.sort(x,y))
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:50:44) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
x1 = ["x , y"]
if (x.upper()== y):
	print(list.sort(x,y))
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:50:53) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
x1 = ["x , y"]
if (x.upper()== y):
	print(list.sort(x,y))
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:51:45) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x.upper()== y):
	print(x,y).sort
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:52:02) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x.upper()== y):
	print(x,y).sort(x,y)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:56:23) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x.upper()== y):
	print(x,y)list.sort(x,y)
-- ERROR:
File "XXXX", line 4
    print(x,y)list.sort(x,y)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:56:34) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x.upper()== y):
	print(list.sort(x,y))
-- ERROR:
File "XXXX", line 4
    print(x,y)list.sort(x,y)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:31) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x.upper()> y):
	print(y)
	print(x)
else:
	print(x)
	print(y)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:33:43) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x.upper()> y):
	print(y)
	print(x)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.098218
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:52) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x.upper()> y):
	print(y)
	print(x)
else:
	print(x)
	print(y)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:34:04) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x.upper()> y):
	print(y)
	print(x)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.145547
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:34:55) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x<y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:35:02) 
-- CODE:
x = (input("digite um nome: "))
y = (input("digite um nome 2: "))
if (x<y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)
-- EXECUTION TIME:
0.103529
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
